--- a/src/app/shared/expandable-table/expandable-table-component/expandable-table.component.html
+++ b/src/app/shared/expandable-table/expandable-table-component/expandable-table.component.html
@@ -1,5 +1,5 @@
 <mat-accordion>
-    <mat-expansion-panel *ngFor="let group of groups">
+    <mat-expansion-panel *ngFor="let group of groups" [disabled]="getGroupData(group).length < 1">
         <mat-expansion-panel-header>
             <mat-panel-title>
               {{ group }}
