--- a/src/app/shared/table/table-component/table.component.html
+++ b/src/app/shared/table/table-component/table.component.html
@@ -13,7 +13,7 @@
     <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
-            <a href={{element.url}} mat-icon-button aria-label="Link"><mat-icon>link</mat-icon></a>
+            <a href={{element.url}} target="_blank" mat-icon-button aria-label="Link"><mat-icon>link</mat-icon></a>
             <button mat-icon-button aria-label="Delete" (click)=deleteItem(element)><mat-icon>delete</mat-icon></button>
         </td>
       </ng-container>
