--- a/src/app/bookmarks/bookmarks-component/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks-component/bookmarks.component.html
@@ -6,12 +6,12 @@
         Some error occurred. Please try again
       </div>
     </div>
+
+    <button mat-fab color=primary (click)=openAddBookmarkDialog()><mat-icon>add</mat-icon></button>
   
     <app-expandable-table
         [groups]=getGroups()
         [data]=bookmarkList
         (onDelete)=deleteBookmark($event)
     ></app-expandable-table>
-
-  <button mat-raised-button color=primary (click)=openAddBookmarkDialog()> ADD </button>
 </div>
