--- a/src/app/bookmarks/bookmarks-component/bookmarks.component.scss
+++ b/src/app/bookmarks/bookmarks-component/bookmarks.component.scss
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     padding: 0 3rem;
     max-width: 800px;
     margin: auto;
@@ -8,3 +9,8 @@
     }
 }
 
+.mat-fab {
+    position: absolute;
+    bottom: -1.8rem;
+    right: 1rem;
+}
